fix(menu): remove extra space around group divider

--- a/projects/scion/sci-components/menu/src/menu/menu.component.scss
+++ b/projects/scion/sci-components/menu/src/menu/menu.component.scss
@@ -232,7 +232,6 @@ $font-size-smaller: $font-size - 1px;
     grid-column: 1/-1; // consume all columns
     height: 1px;
     background-color: var(--sci-color-border);
-    margin: 0 $menu_item_padding_inline .5em $menu_item_padding_inline;
   }
 
   div.message.no-items {
